--- a/.babelrc
+++ b/.babelrc
@@ -14,6 +14,7 @@
     "react"
   ],
   "plugins": [
+    "transform-regenerator",
     "syntax-dynamic-import",
     "transform-object-rest-spread",
     [
