--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react": "~6.24.1",
     "prop-types": "~15.6.0",
     "react": "~15.4.2",
@@ -12,6 +13,7 @@
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "enzyme": "~2.9.1",
     "fetch-mock": "5",
