--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-react": "~6.24.1",
     "prop-types": "~15.6.0",
-    "react": "~15.4.2",
-    "react-dom": "~15.4.2",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
     "react-router": "~3.2.0",
     "redbox-react": "1.6.0"
   },
