--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prop-types": "~15.6.0",
     "react": "16.8.0",
     "react-dom": "16.8.0",
+    "react-google-charts": "^3.0.15",
     "react-router": "~3.2.0",
     "redbox-react": "1.6.0"
   },
