--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-calendar-heatmap": "^1.8.1",
     "react-dom": "16.8.0",
     "react-google-charts": "^3.0.15",
+    "react-modal": "^3.11.1",
     "react-router": "~3.2.0",
     "react-tooltip": "^3.11.1",
     "redbox-react": "1.6.0"
