--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@
 rake db:drop && rake db:create && rake db:migrate && rake db:migrate && rake db:seed && rake backfill_reset 324
 
 heroku restart && heroku pg:reset DATABASE --confirm sp10-tracker && heroku run rake db:migrate && heroku run rake db:seed && heroku run rake backfill_reset 324
+
+sp10 constituents changed on Tuesday, March 17
